frontend/components/CSS/App.css
body {
  text-align: center;
  overflow-x: hidden;
  margin: 0;
  background-color: rgb(0, 0, 0);
  color: white;
  transition: 2s;
}

body[theme='dark'] {
  background-color: rgb(0, 0, 0);
  color: white;
}

body[theme='light'] {
  background-color: rgb(255, 254, 238);
  color: rgb(0, 0, 0);
}

.App-logo {
  height: 40vmin;
  pointer-events: auto;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

html {
  background-color: #ffffff;
}

.App-header {
  min-height: 70vmin;
  margin: 0;
  margin-top: 85px;
  padding-top: 10vh;
  width: 99vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: black;
  border-radius: 3000px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

h1 {
  font-family: Inter, sans-serif;
  margin-bottom: 10vh;
}

.key-features h1 {
  margin-left: 5vw;
  margin-right: 5vw;
  margin-bottom: 20vh;
}

.first-comp {
  padding-top: 100px;
  font-size: 60px;
  animation: fadeIn 8s;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.Pods-description {
  width: 35vw;
  display: inline-block;
  font-size: 30px;
  border: 2px;
  border-style: solid;
  border-radius: 20px;
  padding: 10px;
  padding-top: 40px;
  padding-bottom: 40px;
  box-shadow: 7px 4px 4px rgb(0, 255, 247);
  vertical-align: top;
  margin: 5vw 5vw;
  min-width: 400px;
}

#ac-chart-container {
  height: 500px;
  width: 45vw;
  min-width: 700px;
  display: inline-block;
  margin-bottom: 20vh;
}

.metrics {
  height: 50vmin;
}

.download {
  color: white;
  background-color: #89d6c5;
  font-size: 30px;
  height: 10vmin;
  width: 40vmin;
  border: 2px;
  border-style: solid;
  border-color: #4ba491;
  border-radius: 20px;
  box-shadow: 1px 1px 1px 1px #4ba491;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  margin-bottom: 5vh;
  margin-top: -5vh;
}

.download:hover {
  background-color: #01a07e;
  border: #037058;
  transition-duration: 300ms;
  box-shadow: 1px 1px 1px 4px #037058;
  cursor: pointer;
}

.download:active {
  top: 5px;
  left: 5px;
  box-shadow: none;
}

.backgroundImg {
  background-image: url('https://image.ibb.co/czVo18/stars.png');
  width: 100%;
  overflow: hidden;
  background-size: 2400px;
}

